--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,6 +1,6 @@
 <div class="search1">
   <img class="logo" src="/img/google.png" alt="Google logo" />
-  <form class="" action="index.html" method="post">
+  <form class="" action="/results" method="post">
       <input class="searchbar1" type="text">
       <button class="button1">Search</button>
   </form>
