added dynamic views + filter function + partial result

--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,7 +1,7 @@
 <div class="search1">
   <img class="logo" src="/img/google.png" alt="Google logo" />
-  <form class="" action="/results" method="post">
-      <input class="searchbar1" type="text">
+  <form class="" name="search" action="/results" method="post">
+      <input class="searchbar1" type="text" name="research">
       <button class="button1">Search</button>
   </form>
 </div>
